header section added

--- a/index.html
+++ b/index.html
@@ -6,5 +6,27 @@
     <title>Flower Shop</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <!-- banner section -->
+      <section class="banner">
+        <div class="banner-content">
+          <h2>Let's make beautiful flowers a part of your life.</h2>
+          <p>
+            Beautiful flowers, with their vibrant colors and delicate scents,
+            brighten daily life. They symbolize nature's artistry, offering
+            moments of peace and joy. Whether in a garden or a simple bouquet,
+            flowers remind us to appreciate beauty in the small, everyday
+            wonders around us.
+          </p>
+          <button class="btn-primary">Shop Now</button>
+        </div>
+        <div class="banner-image">
+          <img src="./images/Banner-Flower.png" alt="" />
+        </div>
+      </section>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
