featured section added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,39 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <!-- featured section -->
+      <section class="featured">
+        <div class="section-content">
+          <h2 class="section-title">Our Featured Flowers</h2>
+          <p class="section-info">
+            Flowers captivate with their vibrant colors and intricate patterns.
+            They symbolize beauty and enriching our lives & environments with
+            their presence and offering a connection to nature's artistry.
+          </p>
+        </div>
+        <div class="featured-content">
+          <div class="single-featured-content">
+            <div class="featured-01">
+              <img src="./images/round-flower-1.png" alt="" />
+            </div>
+            <a href="">Pink Flower Tree</a>
+          </div>
+          <div class="single-featured-content">
+            <div class="featured-02">
+              <img src="./images/round-flower-2.png" alt="" />
+            </div>
+            <a href="">Mixed Flower Tree</a>
+          </div>
+          <div class="single-featured-content">
+            <div class="featured-03">
+              <img src="./images/round-flower-3.png" alt="" />
+            </div>
+            <a href="">Yellow Flower Tree</a>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
