support section added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@
           </div>
         </div>
       </section>
+
+      <!-- support section -->
+      <section class="support">
+        <div class="single-support-content">
+          <div><img src="./images/emoji-1.png" alt="" /></div>
+          <p class="section-info">Same Day Delivery. Click & Collect.</p>
+        </div>
+        <div class="single-support-content">
+          <div><img src="./images/emoji-2.png" alt="" /></div>
+          <p class="section-info">Fresh Flowers. Local Growers.</p>
+        </div>
+        <div class="single-support-content">
+          <div><img src="./images/emoji-3.png" alt="" /></div>
+          <p class="section-info">24/7 Free Support.</p>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
