offer section added

--- a/index.html
+++ b/index.html
@@ -74,6 +74,27 @@
           <p class="section-info">24/7 Free Support.</p>
         </div>
       </section>
+
+      <!-- offer section -->
+      <div class="offer">
+        <section class="offer-content">
+          <div class="offer-info">
+            <h2 class="section-title">
+              Hot Deal ! Sale Up To 25% <span class="pink">Off</span>
+            </h2>
+            <p class="section-info">
+              Sign up for our flower shop newsletter today and receive an
+              exclusive 25% discount on your first purchase. Enjoy beautiful
+              blooms and save big—subscribe now and brighten your day with fresh
+              flowers!
+            </p>
+            <button class="btn-primary">Sign Up</button>
+          </div>
+          <div class="offer-image">
+            <img src="./images/Deal-Flower.png" alt="" />
+          </div>
+        </section>
+      </div>
     </main>
     <footer></footer>
   </body>
