classic section added

--- a/index.html
+++ b/index.html
@@ -95,6 +95,32 @@
           </div>
         </section>
       </div>
+
+      <!-- classic section -->
+      <section class="classic">
+        <div class="section-content">
+          <h2 class="section-title">Our Classic Flowers</h2>
+          <p class="section-info">
+            Check out our regular sale items at the flower shop! Enjoy discounts
+            on stunning bouquets and arrangements. Refresh your space with
+            vibrant flowers and save on beautiful blooms today!
+          </p>
+        </div>
+        <div class="classic-content">
+          <div class="classic-content-image">
+            <img src="./images/Flower-01.png" alt="" />
+          </div>
+          <div class="classic-content-image">
+            <img src="./images/Flower-02.png" alt="" />
+          </div>
+          <div class="classic-content-image">
+            <img src="./images/Flower-03.png" alt="" />
+          </div>
+          <div class="classic-content-image">
+            <img src="./images/Flower-04.png" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
