subscribe section added

--- a/index.html
+++ b/index.html
@@ -121,6 +121,20 @@
           </div>
         </div>
       </section>
+
+      <!-- subscribe section -->
+      <section class="subscribe">
+        <div class="section-content">
+          <h2 class="section-title">Get The Latest Deals</h2>
+          <p class="section-info">Gift coupon for first shopping</p>
+        </div>
+        <div class="subscribe-btn">
+          <form action="#">
+            <input type="email" placeholder="Enter your email here..." />
+            <input class="btn-primary" type="submit" value="Subscribe" />
+          </form>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
