footer section added

--- a/index.html
+++ b/index.html
@@ -136,6 +136,19 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <!-- footer section -->
+      <div class="footer-content">
+        <h2 class="footer-title"><span class="pink">Flower</span>Shop</h2>
+        <p class="footer-info">
+          Our flower shop offers fresh, stunning blooms and exceptional service.
+          Explore our exquisite arrangements and brighten your day with
+          beautiful flowers. Contact us for custom orders and delivery!
+        </p>
+        <p class="footer-copyright">
+          &copy;2024, FlowerShop. All rights reserved.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
