responsive for  mobile device

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flower Shop</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
     <header>
@@ -131,7 +132,7 @@
         <div class="subscribe-btn">
           <form action="#">
             <input type="email" placeholder="Enter your email here..." />
-            <input class="btn-primary" type="submit" value="Subscribe" />
+            <button class="btn-primary" type="submit">Subscribe</button>
           </form>
         </div>
       </section>
